...
          : {
              userId =
                  widget.boardStore.getUserIdByName(widget.boardStore.assignee),
              await _taskEditorStore.updateIssue(
                  context, widget.item.id, userId)
            };
    }, "Approve");
  }

  Widget listViewWithoutDropdown() {
    IssueRes currentIssue = widget.item.issue.issueId == ""
        ? widget.item.issue
        : widget.boardStore.getIssueById(widget.item.issue.issueId);
...
          Column(
            crossAxisAlignment: CrossAxisAlignment.stretch,
            mainAxisAlignment: MainAxisAlignment.start,
            mainAxisSize: MainAxisSize.min,
            children: [
              GeeTextDropdown(
                key: const ValueKey("parentTaskDropdown"),
                items: widget.boardStore
                    .getIssuesWithoutSelectedOnes(currentIssue),
                initialValue: "Empty",
                onChanged: (selectedParentIssue) {
                  _taskEditorStore.selectParentIssue(selectedParentIssue);
                  if (_taskEditorStore.selectedParentIssue != "" &&
...
